k8s/http-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-stackoverflowclone
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: stackoverflowclone.com
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: stackoverflowclone
            port:
              name: use-annotation
